k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8081
